[package]
name = "wizgto-solver"
version = "0.11.0"
edition = "2021"

[dependencies]
# default-features off: the `bincode` feature (game file save/load, unused here) fails to
# compile against bincode 2.0.1 (crate targets 2.0.0-rc.3). `rayon` = multithreaded solving.
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", default-features = false, features = ["rayon"] }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
